# gadk_msg_trim_agent

./: README.md  pyproject.toml
deployment/: local.py  remote.py
gadk_msg_trim_agent/: agent.py
gadk_msg_trim_agent/tools/: character_counter.py
