[project]
name = "gadk_msg_trim_agent"
version = "0.1.0"
description = "A bot that shortens your messages"
authors = [
    {name = "Dumidu Rajapaksha", email = "dumidu.rajapaksa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.31.0"
google-adk = "^0.1.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = {version = "^1.42.1", extras = ["adk", "agent_engines"]}
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"
deprecated = "^1.2.18"

[tool.poetry.scripts]
gadk-msg-trim-agent = "gadk_msg_trim_agent:app"
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 